# hifi

./: CMakeLists.txt
interface/: CMakeLists.txt
interface/resources/controllers/: keyboardMouse.json
interface/resources/shaders/: hmd_ui.vert
interface/src/: Application.cpp  Application.h  main.cpp
interface/src/avatar/: AvatarManager.cpp  AvatarManager.h  MyAvatar.cpp  MyHead.cpp  MySkeletonModel.cpp  MySkeletonModel.h
interface/src/commerce/: Wallet.cpp
interface/src/ui/: ApplicationOverlay.h  LoginDialog.cpp  Stats.cpp
libraries/audio-client/src/: AudioClient.cpp  AudioClient.h
libraries/audio/src/: AudioGate.cpp
libraries/avatars-renderer/: CMakeLists.txt
libraries/avatars/src/: AvatarData.cpp
libraries/entities-renderer/src/: RenderableWebEntityItem.cpp  RenderableWebEntityItem.h
libraries/entities/src/: EntityScriptingInterface.cpp
libraries/gpu-gl/: CMakeLists.txt
libraries/gpu-gl/src/gpu/gl/: GLTexture.cpp
libraries/networking/src/: LimitedNodeList.cpp  NodePermissions.cpp  NodePermissions.h
libraries/render-utils/src/: AmbientOcclusionEffect.h  AnimDebugDraw.h  AntialiasingEffect.h  BackgroundStage.h  DeferredFrameTransform.cpp  DeferredFrameTransform.h  DeferredFramebuffer.h  DeferredLightingEffect.h  GeometryCache.cpp  GeometryCache.h  LightClusters.h  LightStage.h  LightingModel.h  MeshPartPayload.cpp  Model.h  RenderForwardTask.cpp  RenderPipelines.cpp  SubsurfaceScattering.h  SurfaceGeometryPass.h  ZoneRenderer.h
libraries/script-engine/src/: FileScriptingInterface.cpp
scripts/: defaultScripts.js
(+41 files in other folders)
